--- a/style.css
+++ b/style.css
@@ -502,3 +502,28 @@ h5.bold a {
     }
 
 }
+
+/* Bubbles */
+spanBox {
+    position:fixed;
+    border-radius: 50%;
+    background-color: #fff;
+    animation: ani 10s linear infinite;
+  }
+   
+  @keyframes ani {
+    0% {
+        transform: scale(0) translateY(0) rotate(0deg);
+        opacity: 0;
+    }
+  
+    20% {
+        opacity: 0.3;
+    }
+  
+    100% {
+        transform: scale(1) translateY(-800%) rotate(360deg);
+        opacity: 0;
+    }
+  
+  } 
